Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/TryWithResources/ResourceNameConflict.out
ResourceNameConflict.java:21:35: compiler.err.already.defined: kindname.variable, tr, kindname.method, test1()
ResourceNameConflict.java:27:39: compiler.err.already.defined: kindname.variable, str, kindname.method, test2(java.lang.String...)
2 errors
